#43 implemented, #42 replaced with another solution, #41 highly improved, #36 improved + NEW FEATURES: public playlists stored on a database, minor improvements and gug fixes