@@ -1,27 +1,36 @@
-package cz.krystofcejchan.commands.commands_slash.users_custom_playlists.open;
+package cz.krystofcejchan.commands.commands_slash.users_custom_playlists.open.get;
 
 import cz.krystofcejchan.commands.commands_slash.ISlashCommands;
 import cz.krystofcejchan.database.sqlite.users_custom_playlists.commit_queries.Queries;
 import cz.krystofcejchan.database.sqlite.users_custom_playlists.connection.ConnectToDatabase;
+import cz.krystofcejchan.dropdown_lists.PlayPublicPlaylistDropdownList;
 import cz.krystofcejchan.enums_annotations_exceptions.enums.ArgumentSlashCommandCount;
 import cz.krystofcejchan.enums_annotations_exceptions.enums.SlashCommandCategory;
+import cz.krystofcejchan.main.Main;
+import cz.krystofcejchan.utility_class.GlobalValues;
 import cz.krystofcejchan.utility_class.UtilityClass;
 import net.dv8tion.jda.api.EmbedBuilder;
 import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
 import net.dv8tion.jda.api.interactions.commands.build.OptionData;
-import net.dv8tion.jda.api.interactions.components.ActionRow;
-import net.dv8tion.jda.api.interactions.components.buttons.Button;
-import net.dv8tion.jda.api.interactions.components.buttons.ButtonStyle;
+import net.dv8tion.jda.api.interactions.components.selections.SelectMenu;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.sql.SQLException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
-public class PlayPopularPlaylists implements ISlashCommands {
+public class GetPopularPlaylists extends PlayPublicPlaylistDropdownList implements ISlashCommands {
+    /**
+     * arraylist containing all songs from one database row joined to one another by ';'
+     */
+    public static List<String> songs = new ArrayList<>();
+    /**
+     * authors of the playlists
+     */
+    public static List<String> authors = new ArrayList<>();
+    private int generateEmbedCounter = 0;
 
     @Override
     public void executeSlashCommand(SlashCommandInteractionEvent slashEvent) {
@@ -30,22 +39,14 @@ public class PlayPopularPlaylists implements ISlashCommands {
                     .Retrieve
                     .mostPopularRecords(Objects.requireNonNull(ConnectToDatabase.getInstance().connectToDatabase()));
 
+            SelectMenu.Builder selectMenu = SelectMenu.create(super.getIdentification());
+            selectMenu.setPlaceholder("Select playlist(s) to be queued...");
+            for (int i = 0; i < databaseRes.size(); i++)
+                selectMenu.addOption("Play playlist n. " + (i + 1), String.valueOf(i + 1));
 
-            List<ActionRow> buttonsAsActionRows = new ArrayList<>();
-            for (int i = 0; i < databaseRes.size(); i++) {
-                buttonsAsActionRows
-                        .add(ActionRow
-                                .of(Button
-                                        .of(ButtonStyle.SECONDARY,
-                                                i + "popular_public_playlist",
-                                                "Play play-list n." + i)
-                                )
-                        );
-            }
+            selectMenu.setRequiredRange(1, selectMenu.getOptions().size());
 
-
-            slashEvent.replyEmbeds(generateEmbed(databaseRes).build())
-                    .addActionRows(buttonsAsActionRows).queue();
+            slashEvent.replyEmbeds(generateEmbed(databaseRes).build()).addActionRow(selectMenu.build()).queue();
 
         } catch (SQLException e) {
             e.printStackTrace();
@@ -55,9 +56,18 @@ public class PlayPopularPlaylists implements ISlashCommands {
     private EmbedBuilder generateEmbed(List<List<String>> listOList) {
         EmbedBuilder embedBuilder = new EmbedBuilder();
 
-        listOList.forEach(list ->
-                embedBuilder.addField("Info [title: " + list.get(1) + "]",
-                        "Title: " + list.get(1) + "\nDescription: " + list.get(2) + "\n", true)
+        listOList.forEach(list -> {
+                    embedBuilder.addField("Playlist => " + ++generateEmbedCounter,
+                            "Title: " + list.get(1) + "\nDescription: " + list.get(2) + "\nSongs: " +
+                                    list.get(5).replaceAll(GlobalValues.DATABASE_SONG_SEPARATOR, ", ") +
+                                    "\nCreated by **" + Objects.requireNonNull(Main.publicJDA
+                                    .getUserById(list.get(4))).getName() +
+                                    "** on **" + Objects.requireNonNull(Main.publicJDA
+                                    .getGuildById(list.get(3))).getName() + "** server",
+                            true);
+                    songs.add(list.get(5));
+                    authors.add(list.get(4));
+                }
         );
         return embedBuilder.setColor(UtilityClass.getRandomColor()).setTitle("The most popular play-lists");
     }
@@ -101,6 +111,6 @@ public class PlayPopularPlaylists implements ISlashCommands {
 
     @Override
     public @NotNull List<SlashCommandCategory> getCategory() {
-        return Collections.singletonList(SlashCommandCategory.MUSIC);
+        return List.of(SlashCommandCategory.MUSIC, SlashCommandCategory.PLAYLISTS);
     }
 }
